apps/70-tools/argocd-image-updater/base/http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-image-updater-redirect-scheme
  namespace: tools
spec:
  redirectScheme:
    scheme: https
    permanent: true
