apps/70-tools/argocd-image-updater/base/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater-controller
  namespace: argocd-image-updater-system
spec:
  template:
    spec:
      securityContext:
        fsGroup: 1000
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      volumes:
        - name: tmp
          emptyDir: null
          persistentVolumeClaim:
            claimName: argocd-image-updater-cache
