apps/70-tools/argocd-image-updater/base/service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-image-updater-webhook
  namespace: tools
  labels:
    app.kubernetes.io/name: argocd-image-updater
spec:
  ports:
    - name: webhook
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    control-plane: argocd-image-updater-controller
