apps/70-tools/argocd-image-updater/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-image-updater
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod # Default, patched in overlay
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: tools-argocd-image-updater-redirect-scheme@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: image-updater.dev.truxonline.com # Default, patched in overlay
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-image-updater-webhook
            port:
              number: 8080
  tls:
  - hosts:
    - image-updater.dev.truxonline.com # Default, patched in overlay
    secretName: argocd-image-updater-tls
