apps/70-tools/argocd-image-updater/base/networkpolicy-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook-traffic
  namespace: tools
spec:
  podSelector:
    matchLabels:
      control-plane: argocd-image-updater-controller
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  policyTypes:
  - Ingress
